AppLanguage / Translate / Start work on ModSelection / Add some base path props

--- a/src/D2RLauncher/D2RLauncher/App.config
+++ b/src/D2RLauncher/D2RLauncher/App.config
@@ -10,6 +10,15 @@
             <setting name="AppLanguage" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="TextLanguage" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="AudioLanguage" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="SelectedMod" serializeAs="String">
+                <value />
+            </setting>
         </D2RLauncher.Properties.Settings>
     </userSettings>
 </configuration>
