--- a/src/D2RLauncher/D2RLauncher/D2RLauncher.csproj
+++ b/src/D2RLauncher/D2RLauncher/D2RLauncher.csproj
@@ -8,6 +8,66 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Resources\BuffIcons\BuffIcons.zip" />
+    <None Remove="Resources\BuffIcons\Images\BuffIconPreview.png" />
+    <None Remove="Resources\BuffIcons\Images\Preview_BattleCommand.png" />
+    <None Remove="Resources\BuffIcons\Images\Preview_BattleOrders.png" />
+    <None Remove="Resources\BuffIcons\Images\Preview_BladesofIce.png" />
+    <None Remove="Resources\BuffIcons\Images\Preview_Blaze.png" />
+    <None Remove="Resources\BuffIcons\Images\Preview_BoneArmor.png" />
+    <None Remove="Resources\BuffIcons\Images\Preview_BurstOfSpeed.png" />
+    <None Remove="Resources\BuffIcons\Images\Preview_ChillingArmor.png" />
+    <None Remove="Resources\BuffIcons\Images\Preview_ClawsofThunder.png" />
+    <None Remove="Resources\BuffIcons\Images\Preview_CobraStrike.png" />
+    <None Remove="Resources\BuffIcons\Images\Preview_CycloneArmor.png" />
+    <None Remove="Resources\BuffIcons\Images\Preview_Enchant.png" />
+    <None Remove="Resources\BuffIcons\Images\Preview_EnergyShield.png" />
+    <None Remove="Resources\BuffIcons\Images\Preview_Fade.png" />
+    <None Remove="Resources\BuffIcons\Images\Preview_FistsofFire.png" />
+    <None Remove="Resources\BuffIcons\Images\Preview_FrozenArmor.png" />
+    <None Remove="Resources\BuffIcons\Images\Preview_HolyShield.png" />
+    <None Remove="Resources\BuffIcons\Images\Preview_PhoenixStrike.png" />
+    <None Remove="Resources\BuffIcons\Images\Preview_ShiverArmor.png" />
+    <None Remove="Resources\BuffIcons\Images\Preview_Shout.png" />
+    <None Remove="Resources\BuffIcons\Images\Preview_Thunderstorm.png" />
+    <None Remove="Resources\BuffIcons\Images\Preview_TigerStrike.png" />
+    <None Remove="Resources\BuffIcons\Images\Preview_Venom.png" />
+    <None Remove="Resources\BuffIcons\MyBuffTemplates.txt" />
+    <None Remove="Resources\BuffIcons\Overlays\Assassin\fade.json" />
+    <None Remove="Resources\BuffIcons\Overlays\Assassin\quickness.json" />
+    <None Remove="Resources\BuffIcons\Overlays\Common\battlecommand.json" />
+    <None Remove="Resources\BuffIcons\Overlays\Common\battleorders.json" />
+    <None Remove="Resources\BuffIcons\Overlays\Common\buff_blaze.json" />
+    <None Remove="Resources\BuffIcons\Overlays\Common\buff_decoy.json" />
+    <None Remove="Resources\BuffIcons\Overlays\Common\buff_enchant.json" />
+    <None Remove="Resources\BuffIcons\Overlays\Common\buff_holyshield.json" />
+    <None Remove="Resources\BuffIcons\Overlays\Common\buff_shout.json" />
+    <None Remove="Resources\BuffIcons\Overlays\Common\buff_venom.json" />
+    <None Remove="Resources\BuffIcons\Overlays\Common\progressive_cold_1.json" />
+    <None Remove="Resources\BuffIcons\Overlays\Common\progressive_cold_2.json" />
+    <None Remove="Resources\BuffIcons\Overlays\Common\progressive_cold_3.json" />
+    <None Remove="Resources\BuffIcons\Overlays\Common\progressive_damage_1.json" />
+    <None Remove="Resources\BuffIcons\Overlays\Common\progressive_damage_2.json" />
+    <None Remove="Resources\BuffIcons\Overlays\Common\progressive_damage_3.json" />
+    <None Remove="Resources\BuffIcons\Overlays\Common\progressive_fire_1.json" />
+    <None Remove="Resources\BuffIcons\Overlays\Common\progressive_fire_2.json" />
+    <None Remove="Resources\BuffIcons\Overlays\Common\progressive_fire_3.json" />
+    <None Remove="Resources\BuffIcons\Overlays\Common\progressive_lightning_1.json" />
+    <None Remove="Resources\BuffIcons\Overlays\Common\progressive_lightning_2.json" />
+    <None Remove="Resources\BuffIcons\Overlays\Common\progressive_lightning_3.json" />
+    <None Remove="Resources\BuffIcons\Overlays\Common\progressive_other_1.json" />
+    <None Remove="Resources\BuffIcons\Overlays\Common\progressive_other_2.json" />
+    <None Remove="Resources\BuffIcons\Overlays\Common\progressive_other_3.json" />
+    <None Remove="Resources\BuffIcons\Overlays\Common\progressive_steal_1.json" />
+    <None Remove="Resources\BuffIcons\Overlays\Common\progressive_steal_2.json" />
+    <None Remove="Resources\BuffIcons\Overlays\Common\progressive_steal_3.json" />
+    <None Remove="Resources\BuffIcons\Overlays\Druid\cyclonearmor_1back.json" />
+    <None Remove="Resources\BuffIcons\Overlays\Necro\bonearmor_front.json" />
+    <None Remove="Resources\BuffIcons\Overlays\Sorceress\chillarmor.json" />
+    <None Remove="Resources\BuffIcons\Overlays\Sorceress\energyshield.json" />
+    <None Remove="Resources\BuffIcons\Overlays\Sorceress\frozenarmor.json" />
+    <None Remove="Resources\BuffIcons\Overlays\Sorceress\shiverarmor.json" />
+    <None Remove="Resources\BuffIcons\Overlays\Sorceress\thunderstormback.json" />
     <None Remove="Resources\DefaultUserSettings.json" />
     <None Remove="Resources\DefaultUserSettings.txt" />
     <None Remove="Resources\Fonts\0.otf" />
@@ -47,6 +107,7 @@
     <None Remove="Resources\Icons\Icon_Time.png" />
     <None Remove="Resources\Icons\Icon_Vault.png" />
     <None Remove="Resources\Images\D2RL_Logo.png" />
+    <None Remove="Resources\Images\StashSettingsBackground.png" />
     <None Remove="Resources\modinfo_blank.json" />
     <None Remove="Resources\Options\D2RL_SkillIcons.zip" />
     <None Remove="Resources\Options\HideHelmets\hide_helmets.json" />
@@ -111,6 +172,65 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="Resources\BuffIcons\BuffIcons.zip" />
+    <EmbeddedResource Include="Resources\BuffIcons\Images\Preview_BattleCommand.png" />
+    <EmbeddedResource Include="Resources\BuffIcons\Images\Preview_BattleOrders.png" />
+    <EmbeddedResource Include="Resources\BuffIcons\Images\Preview_BladesofIce.png" />
+    <EmbeddedResource Include="Resources\BuffIcons\Images\Preview_Blaze.png" />
+    <EmbeddedResource Include="Resources\BuffIcons\Images\Preview_BoneArmor.png" />
+    <EmbeddedResource Include="Resources\BuffIcons\Images\Preview_BurstOfSpeed.png" />
+    <EmbeddedResource Include="Resources\BuffIcons\Images\Preview_ChillingArmor.png" />
+    <EmbeddedResource Include="Resources\BuffIcons\Images\Preview_ClawsofThunder.png" />
+    <EmbeddedResource Include="Resources\BuffIcons\Images\Preview_CobraStrike.png" />
+    <EmbeddedResource Include="Resources\BuffIcons\Images\Preview_CycloneArmor.png" />
+    <EmbeddedResource Include="Resources\BuffIcons\Images\Preview_Enchant.png" />
+    <EmbeddedResource Include="Resources\BuffIcons\Images\Preview_EnergyShield.png" />
+    <EmbeddedResource Include="Resources\BuffIcons\Images\Preview_Fade.png" />
+    <EmbeddedResource Include="Resources\BuffIcons\Images\Preview_FistsofFire.png" />
+    <EmbeddedResource Include="Resources\BuffIcons\Images\Preview_FrozenArmor.png" />
+    <EmbeddedResource Include="Resources\BuffIcons\Images\Preview_HolyShield.png" />
+    <EmbeddedResource Include="Resources\BuffIcons\Images\Preview_PhoenixStrike.png" />
+    <EmbeddedResource Include="Resources\BuffIcons\Images\Preview_ShiverArmor.png" />
+    <EmbeddedResource Include="Resources\BuffIcons\Images\Preview_Shout.png" />
+    <EmbeddedResource Include="Resources\BuffIcons\Images\Preview_Thunderstorm.png" />
+    <EmbeddedResource Include="Resources\BuffIcons\Images\Preview_TigerStrike.png" />
+    <EmbeddedResource Include="Resources\BuffIcons\Images\Preview_Venom.png" />
+    <EmbeddedResource Include="Resources\BuffIcons\MyBuffTemplates.txt" />
+    <EmbeddedResource Include="Resources\BuffIcons\Overlays\Assassin\fade.json" />
+    <EmbeddedResource Include="Resources\BuffIcons\Overlays\Assassin\quickness.json" />
+    <EmbeddedResource Include="Resources\BuffIcons\Overlays\Common\battlecommand.json" />
+    <EmbeddedResource Include="Resources\BuffIcons\Overlays\Common\battleorders.json" />
+    <EmbeddedResource Include="Resources\BuffIcons\Overlays\Common\buff_blaze.json" />
+    <EmbeddedResource Include="Resources\BuffIcons\Overlays\Common\buff_decoy.json" />
+    <EmbeddedResource Include="Resources\BuffIcons\Overlays\Common\buff_enchant.json" />
+    <EmbeddedResource Include="Resources\BuffIcons\Overlays\Common\buff_holyshield.json" />
+    <EmbeddedResource Include="Resources\BuffIcons\Overlays\Common\buff_shout.json" />
+    <EmbeddedResource Include="Resources\BuffIcons\Overlays\Common\buff_venom.json" />
+    <EmbeddedResource Include="Resources\BuffIcons\Overlays\Common\progressive_cold_1.json" />
+    <EmbeddedResource Include="Resources\BuffIcons\Overlays\Common\progressive_cold_2.json" />
+    <EmbeddedResource Include="Resources\BuffIcons\Overlays\Common\progressive_cold_3.json" />
+    <EmbeddedResource Include="Resources\BuffIcons\Overlays\Common\progressive_damage_1.json" />
+    <EmbeddedResource Include="Resources\BuffIcons\Overlays\Common\progressive_damage_2.json" />
+    <EmbeddedResource Include="Resources\BuffIcons\Overlays\Common\progressive_damage_3.json" />
+    <EmbeddedResource Include="Resources\BuffIcons\Overlays\Common\progressive_fire_1.json" />
+    <EmbeddedResource Include="Resources\BuffIcons\Overlays\Common\progressive_fire_2.json" />
+    <EmbeddedResource Include="Resources\BuffIcons\Overlays\Common\progressive_fire_3.json" />
+    <EmbeddedResource Include="Resources\BuffIcons\Overlays\Common\progressive_lightning_1.json" />
+    <EmbeddedResource Include="Resources\BuffIcons\Overlays\Common\progressive_lightning_2.json" />
+    <EmbeddedResource Include="Resources\BuffIcons\Overlays\Common\progressive_lightning_3.json" />
+    <EmbeddedResource Include="Resources\BuffIcons\Overlays\Common\progressive_other_1.json" />
+    <EmbeddedResource Include="Resources\BuffIcons\Overlays\Common\progressive_other_2.json" />
+    <EmbeddedResource Include="Resources\BuffIcons\Overlays\Common\progressive_other_3.json" />
+    <EmbeddedResource Include="Resources\BuffIcons\Overlays\Common\progressive_steal_1.json" />
+    <EmbeddedResource Include="Resources\BuffIcons\Overlays\Common\progressive_steal_2.json" />
+    <EmbeddedResource Include="Resources\BuffIcons\Overlays\Common\progressive_steal_3.json" />
+    <EmbeddedResource Include="Resources\BuffIcons\Overlays\Druid\cyclonearmor_1back.json" />
+    <EmbeddedResource Include="Resources\BuffIcons\Overlays\Necro\bonearmor_front.json" />
+    <EmbeddedResource Include="Resources\BuffIcons\Overlays\Sorceress\chillarmor.json" />
+    <EmbeddedResource Include="Resources\BuffIcons\Overlays\Sorceress\energyshield.json" />
+    <EmbeddedResource Include="Resources\BuffIcons\Overlays\Sorceress\frozenarmor.json" />
+    <EmbeddedResource Include="Resources\BuffIcons\Overlays\Sorceress\shiverarmor.json" />
+    <EmbeddedResource Include="Resources\BuffIcons\Overlays\Sorceress\thunderstormback.json" />
     <EmbeddedResource Include="Resources\DefaultUserSettings.json" />
     <EmbeddedResource Include="Resources\Fonts\0.otf" />
     <EmbeddedResource Include="Resources\Fonts\1.otf" />
@@ -187,6 +307,8 @@
     <EmbeddedResource Include="Resources\Options\MonsterStats\MonsterStats.dll" />
     <EmbeddedResource Include="Resources\Options\PersonalizedTabs\stash_rmd" />
     <EmbeddedResource Include="Resources\Options\PersonalizedTabs\stash_vnp" />
+    <Resource Include="Resources\BuffIcons\Images\BuffIconPreview.png" />
+    <Resource Include="Resources\Images\StashSettingsBackground.png" />
     <Resource Include="Resources\Preview\Preview_HUD.png" />
     <Resource Include="Resources\Preview\Preview_ItemIcons.png" />
     <Resource Include="Resources\Preview\Preview_MercIcon.png" />
