--- a/src/D2RLaunch/D2RLaunch/App.config
+++ b/src/D2RLaunch/D2RLaunch/App.config
@@ -19,6 +19,9 @@
             <setting name="SelectedMod" serializeAs="String">
                 <value />
             </setting>
+            <setting name="InstallPath" serializeAs="String">
+                <value />
+            </setting>
         </D2RLaunch.Properties.Settings>
     </userSettings>
 </configuration>
