--- a/src/D2RLaunch/D2RLaunch/Properties/Settings.settings
+++ b/src/D2RLaunch/D2RLaunch/Properties/Settings.settings
@@ -14,5 +14,8 @@
     <Setting Name="SelectedMod" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="InstallPath" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
