--- a/src/D2RLaunch/D2RLaunch/D2RLaunch.csproj
+++ b/src/D2RLaunch/D2RLaunch/D2RLaunch.csproj
@@ -356,6 +356,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Syncfusion.Licensing" Version="23.1.41" />
     <PackageReference Include="Syncfusion.SfColorPalette.WPF" Version="23.1.41" />
+    <PackageReference Include="Syncfusion.SfInput.WPF" Version="23.1.41" />
     <PackageReference Include="Syncfusion.SfNavigationDrawer.WPF" Version="23.1.41" />
     <PackageReference Include="Syncfusion.SfProgressBar.WPF" Version="23.1.41" />
     <PackageReference Include="Syncfusion.SfSkinManager.WPF" Version="23.1.41" />
