Monster HP Bar Color + Stat Updates
- Removed MonsterColor Enum UserSetting
- Added ColorPicker for Monster HP Bar
- Updated Monster Stats and HP Bar UI Display
-

--- a/src/D2RLaunch/D2RLaunch/D2RLaunch.csproj
+++ b/src/D2RLaunch/D2RLaunch/D2RLaunch.csproj
@@ -161,6 +161,7 @@
     <None Remove="Resources\Options\MonsterStats\HB_R.lowend.sprite" />
     <None Remove="Resources\Options\MonsterStats\HB_R.sprite" />
     <None Remove="Resources\Options\MonsterStats\hudmonsterhealthhd.json" />
+    <None Remove="Resources\Options\MonsterStats\MS_Assets.zip" />
     <None Remove="Resources\Options\PersonalizedTabs\stash_rmd" />
     <None Remove="Resources\Options\PersonalizedTabs\stash_vnp" />
     <None Remove="Resources\Preview\Preview_HUD.png" />
@@ -261,6 +262,7 @@
     <EmbeddedResource Include="Resources\Fonts\9.otf" />
     <EmbeddedResource Include="Resources\Fonts\9.png" />
     <EmbeddedResource Include="Resources\Fonts\0.png" />
+    <EmbeddedResource Include="Resources\Options\MonsterStats\MS_Assets.zip" />
     <Resource Include="Resources\Preview\D2RLaunch_ColorDyePreview.png" />
     <EmbeddedResource Include="Resources\modinfo_blank.json" />
     <EmbeddedResource Include="Resources\Options\D2RL_SkillIcons.zip" />
