--- a/src/D2RLaunch/D2RLaunch/D2RLaunch.csproj
+++ b/src/D2RLaunch/D2RLaunch/D2RLaunch.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="Resources\appSettings.json" />
     <None Remove="Resources\BuffIcons\BuffIcons.zip" />
     <None Remove="Resources\BuffIcons\Images\BuffIconPreview.png" />
     <None Remove="Resources\BuffIcons\Images\Preview_BattleCommand.png" />
@@ -179,6 +180,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="Resources\appSettings.json" />
     <EmbeddedResource Include="Resources\BuffIcons\BuffIcons.zip" />
     <EmbeddedResource Include="Resources\BuffIcons\Images\Preview_BattleCommand.png" />
     <EmbeddedResource Include="Resources\BuffIcons\Images\Preview_BattleOrders.png" />
@@ -356,6 +358,9 @@
     <PackageReference Include="Google.Apis.Sheets.v4" Version="1.64.0.3148" />
     <PackageReference Include="JetBrains.Annotations" Version="2023.2.0" />
     <PackageReference Include="log4net" Version="2.0.15" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="9.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.1" />
     <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.39" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Syncfusion.Licensing" Version="23.1.41" />
