--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ src/D2RLauncher/D2RLauncher.sln.DotSettings.user
 src/D2RLaunch/D2RLaunch/obj
 src/D2RLaunch/D2RLaunch/bin
 src/D2RLaunch/.vs
+src/D2RLaunch/D2RLaunch/Resources/appSettings.json
