--- a/src/D2RLaunch/D2RLaunch/D2RLaunch.csproj
+++ b/src/D2RLaunch/D2RLaunch/D2RLaunch.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="Resources\appSettings.json" />
     <None Remove="Resources\BuffIcons\BuffIcons.zip" />
     <None Remove="Resources\BuffIcons\Images\BuffIconPreview.png" />
     <None Remove="Resources\BuffIcons\Images\Preview_BattleCommand.png" />
@@ -179,6 +180,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="Resources\appSettings.json" />
     <EmbeddedResource Include="Resources\BuffIcons\BuffIcons.zip" />
     <EmbeddedResource Include="Resources\BuffIcons\Images\Preview_BattleCommand.png" />
     <EmbeddedResource Include="Resources\BuffIcons\Images\Preview_BattleOrders.png" />
