--- a/src/D2RLaunch/D2RLaunch/D2RLaunch.csproj
+++ b/src/D2RLaunch/D2RLaunch/D2RLaunch.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <None Remove="Resources\appSettings.json" />
+    <None Remove="Resources\appSettings.EXAMPLE.json" />
     <None Remove="Resources\BuffIcons\BuffIcons.zip" />
     <None Remove="Resources\BuffIcons\Images\BuffIconPreview.png" />
     <None Remove="Resources\BuffIcons\Images\Preview_BattleCommand.png" />
@@ -181,6 +182,7 @@
 
   <ItemGroup>
     <EmbeddedResource Include="Resources\appSettings.json" />
+    <EmbeddedResource Include="Resources\appSettings.EXAMPLE.json" />
     <EmbeddedResource Include="Resources\BuffIcons\BuffIcons.zip" />
     <EmbeddedResource Include="Resources\BuffIcons\Images\Preview_BattleCommand.png" />
     <EmbeddedResource Include="Resources\BuffIcons\Images\Preview_BattleOrders.png" />
