Buff Icon settings

--- a/src/D2RLaunch/D2RLaunch/D2RLaunch.csproj
+++ b/src/D2RLaunch/D2RLaunch/D2RLaunch.csproj
@@ -17,30 +17,30 @@
     <None Remove="Resources\appSettings.json" />
     <None Remove="Resources\appSettings.EXAMPLE.json" />
     <None Remove="Resources\BuffIcons\BuffIcons.zip" />
-    <None Remove="Resources\BuffIcons\Images\BuffIconPreview.png" />
-    <None Remove="Resources\BuffIcons\Images\Preview_BattleCommand.png" />
-    <None Remove="Resources\BuffIcons\Images\Preview_BattleOrders.png" />
-    <None Remove="Resources\BuffIcons\Images\Preview_BladesofIce.png" />
-    <None Remove="Resources\BuffIcons\Images\Preview_Blaze.png" />
-    <None Remove="Resources\BuffIcons\Images\Preview_BoneArmor.png" />
-    <None Remove="Resources\BuffIcons\Images\Preview_BurstOfSpeed.png" />
-    <None Remove="Resources\BuffIcons\Images\Preview_ChillingArmor.png" />
-    <None Remove="Resources\BuffIcons\Images\Preview_ClawsofThunder.png" />
-    <None Remove="Resources\BuffIcons\Images\Preview_CobraStrike.png" />
-    <None Remove="Resources\BuffIcons\Images\Preview_CycloneArmor.png" />
-    <None Remove="Resources\BuffIcons\Images\Preview_Enchant.png" />
-    <None Remove="Resources\BuffIcons\Images\Preview_EnergyShield.png" />
-    <None Remove="Resources\BuffIcons\Images\Preview_Fade.png" />
-    <None Remove="Resources\BuffIcons\Images\Preview_FistsofFire.png" />
-    <None Remove="Resources\BuffIcons\Images\Preview_FrozenArmor.png" />
-    <None Remove="Resources\BuffIcons\Images\Preview_HolyShield.png" />
-    <None Remove="Resources\BuffIcons\Images\Preview_PhoenixStrike.png" />
-    <None Remove="Resources\BuffIcons\Images\Preview_ShiverArmor.png" />
-    <None Remove="Resources\BuffIcons\Images\Preview_Shout.png" />
-    <None Remove="Resources\BuffIcons\Images\Preview_Thunderstorm.png" />
-    <None Remove="Resources\BuffIcons\Images\Preview_TigerStrike.png" />
-    <None Remove="Resources\BuffIcons\Images\Preview_Venom.png" />
-    <None Remove="Resources\BuffIcons\MyBuffTemplates.txt" />
+    <None Remove="Resources\BuffIcons\DefaultBuffTemplates.txt" />
+    <None Remove="Resources\BuffIcons\Default\BuffIconPreview.png" />
+    <None Remove="Resources\BuffIcons\Default\Preview_BattleCommand.png" />
+    <None Remove="Resources\BuffIcons\Default\Preview_BattleOrders.png" />
+    <None Remove="Resources\BuffIcons\Default\Preview_BladesofIce.png" />
+    <None Remove="Resources\BuffIcons\Default\Preview_Blaze.png" />
+    <None Remove="Resources\BuffIcons\Default\Preview_BoneArmor.png" />
+    <None Remove="Resources\BuffIcons\Default\Preview_BurstOfSpeed.png" />
+    <None Remove="Resources\BuffIcons\Default\Preview_ChillingArmor.png" />
+    <None Remove="Resources\BuffIcons\Default\Preview_ClawsofThunder.png" />
+    <None Remove="Resources\BuffIcons\Default\Preview_CobraStrike.png" />
+    <None Remove="Resources\BuffIcons\Default\Preview_CycloneArmor.png" />
+    <None Remove="Resources\BuffIcons\Default\Preview_Enchant.png" />
+    <None Remove="Resources\BuffIcons\Default\Preview_EnergyShield.png" />
+    <None Remove="Resources\BuffIcons\Default\Preview_Fade.png" />
+    <None Remove="Resources\BuffIcons\Default\Preview_FistsofFire.png" />
+    <None Remove="Resources\BuffIcons\Default\Preview_FrozenArmor.png" />
+    <None Remove="Resources\BuffIcons\Default\Preview_HolyShield.png" />
+    <None Remove="Resources\BuffIcons\Default\Preview_PhoenixStrike.png" />
+    <None Remove="Resources\BuffIcons\Default\Preview_ShiverArmor.png" />
+    <None Remove="Resources\BuffIcons\Default\Preview_Shout.png" />
+    <None Remove="Resources\BuffIcons\Default\Preview_Thunderstorm.png" />
+    <None Remove="Resources\BuffIcons\Default\Preview_TigerStrike.png" />
+    <None Remove="Resources\BuffIcons\Default\Preview_Venom.png" />
     <None Remove="Resources\BuffIcons\Overlays\Assassin\fade.json" />
     <None Remove="Resources\BuffIcons\Overlays\Assassin\quickness.json" />
     <None Remove="Resources\BuffIcons\Overlays\Common\battlecommand.json" />
@@ -184,29 +184,29 @@
     <EmbeddedResource Include="Resources\appSettings.json" />
     <EmbeddedResource Include="Resources\appSettings.EXAMPLE.json" />
     <EmbeddedResource Include="Resources\BuffIcons\BuffIcons.zip" />
-    <EmbeddedResource Include="Resources\BuffIcons\Images\Preview_BattleCommand.png" />
-    <EmbeddedResource Include="Resources\BuffIcons\Images\Preview_BattleOrders.png" />
-    <EmbeddedResource Include="Resources\BuffIcons\Images\Preview_BladesofIce.png" />
-    <EmbeddedResource Include="Resources\BuffIcons\Images\Preview_Blaze.png" />
-    <EmbeddedResource Include="Resources\BuffIcons\Images\Preview_BoneArmor.png" />
-    <EmbeddedResource Include="Resources\BuffIcons\Images\Preview_BurstOfSpeed.png" />
-    <EmbeddedResource Include="Resources\BuffIcons\Images\Preview_ChillingArmor.png" />
-    <EmbeddedResource Include="Resources\BuffIcons\Images\Preview_ClawsofThunder.png" />
-    <EmbeddedResource Include="Resources\BuffIcons\Images\Preview_CobraStrike.png" />
-    <EmbeddedResource Include="Resources\BuffIcons\Images\Preview_CycloneArmor.png" />
-    <EmbeddedResource Include="Resources\BuffIcons\Images\Preview_Enchant.png" />
-    <EmbeddedResource Include="Resources\BuffIcons\Images\Preview_EnergyShield.png" />
-    <EmbeddedResource Include="Resources\BuffIcons\Images\Preview_Fade.png" />
-    <EmbeddedResource Include="Resources\BuffIcons\Images\Preview_FistsofFire.png" />
-    <EmbeddedResource Include="Resources\BuffIcons\Images\Preview_FrozenArmor.png" />
-    <EmbeddedResource Include="Resources\BuffIcons\Images\Preview_HolyShield.png" />
-    <EmbeddedResource Include="Resources\BuffIcons\Images\Preview_PhoenixStrike.png" />
-    <EmbeddedResource Include="Resources\BuffIcons\Images\Preview_ShiverArmor.png" />
-    <EmbeddedResource Include="Resources\BuffIcons\Images\Preview_Shout.png" />
-    <EmbeddedResource Include="Resources\BuffIcons\Images\Preview_Thunderstorm.png" />
-    <EmbeddedResource Include="Resources\BuffIcons\Images\Preview_TigerStrike.png" />
-    <EmbeddedResource Include="Resources\BuffIcons\Images\Preview_Venom.png" />
-    <EmbeddedResource Include="Resources\BuffIcons\MyBuffTemplates.txt" />
+    <EmbeddedResource Include="Resources\BuffIcons\Default\Preview_BattleCommand.png" />
+    <EmbeddedResource Include="Resources\BuffIcons\Default\Preview_BattleOrders.png" />
+    <EmbeddedResource Include="Resources\BuffIcons\Default\Preview_BladesofIce.png" />
+    <EmbeddedResource Include="Resources\BuffIcons\Default\Preview_Blaze.png" />
+    <EmbeddedResource Include="Resources\BuffIcons\Default\Preview_BoneArmor.png" />
+    <EmbeddedResource Include="Resources\BuffIcons\Default\Preview_BurstOfSpeed.png" />
+    <EmbeddedResource Include="Resources\BuffIcons\Default\Preview_ChillingArmor.png" />
+    <EmbeddedResource Include="Resources\BuffIcons\Default\Preview_ClawsofThunder.png" />
+    <EmbeddedResource Include="Resources\BuffIcons\Default\Preview_CobraStrike.png" />
+    <EmbeddedResource Include="Resources\BuffIcons\Default\Preview_CycloneArmor.png" />
+    <EmbeddedResource Include="Resources\BuffIcons\Default\Preview_Enchant.png" />
+    <EmbeddedResource Include="Resources\BuffIcons\Default\Preview_EnergyShield.png" />
+    <EmbeddedResource Include="Resources\BuffIcons\Default\Preview_Fade.png" />
+    <EmbeddedResource Include="Resources\BuffIcons\Default\Preview_FistsofFire.png" />
+    <EmbeddedResource Include="Resources\BuffIcons\Default\Preview_FrozenArmor.png" />
+    <EmbeddedResource Include="Resources\BuffIcons\Default\Preview_HolyShield.png" />
+    <EmbeddedResource Include="Resources\BuffIcons\Default\Preview_PhoenixStrike.png" />
+    <EmbeddedResource Include="Resources\BuffIcons\Default\Preview_ShiverArmor.png" />
+    <EmbeddedResource Include="Resources\BuffIcons\Default\Preview_Shout.png" />
+    <EmbeddedResource Include="Resources\BuffIcons\Default\Preview_Thunderstorm.png" />
+    <EmbeddedResource Include="Resources\BuffIcons\Default\Preview_TigerStrike.png" />
+    <EmbeddedResource Include="Resources\BuffIcons\Default\Preview_Venom.png" />
+    <EmbeddedResource Include="Resources\BuffIcons\DefaultBuffTemplates.txt" />
     <EmbeddedResource Include="Resources\BuffIcons\Overlays\Assassin\fade.json" />
     <EmbeddedResource Include="Resources\BuffIcons\Overlays\Assassin\quickness.json" />
     <EmbeddedResource Include="Resources\BuffIcons\Overlays\Common\battlecommand.json" />
@@ -315,7 +315,7 @@
     <EmbeddedResource Include="Resources\Options\MonsterStats\hudmonsterhealthhd.json" />
     <EmbeddedResource Include="Resources\Options\PersonalizedTabs\stash_rmd" />
     <EmbeddedResource Include="Resources\Options\PersonalizedTabs\stash_vnp" />
-    <Resource Include="Resources\BuffIcons\Images\BuffIconPreview.png" />
+    <Resource Include="Resources\BuffIcons\BuffIconPreview.png" />
     <Resource Include="Resources\Fonts\formal436bt.ttf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
